# heatmap-creator

./: .gitignore  README.md  combine.py  pyproject.toml
server/: Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  gqlgen.yml  package.json  webpack.config.js
server/app/controllers/: auth.go  auth_test.go  chat.go  helpers.go  index.go  info.go  router.go
server/app/graph/model/: models_gen.go
server/app/graph/resolvers/: chat.resolvers.go  helpers.go  resolver.go  user.resolvers.go
server/app/lib/: constants.go
server/app/static/templates/: base.gohtml
server/app/static/ts/app/: AppRoutes.tsx  Footer.tsx  Header.tsx  HeatMap.tsx  Map.tsx  Privacy.tsx
server/app/static/ts/app/home/: Login.tsx  index.tsx
server/cmd/migrate/: main.go
server/cmd/server/: main.go
server/infra/: cloud_run.tf  cloud_sql.tf  main.tf  secret_manager.tf  service_accounts.tf  storage.tf
