[tool.poetry]
name = "combine-gpx"
version = "0.1.0"
description = ""
authors = ["Matt Butterfield <matt@mattbutterfield.com>"]
readme = "README.md"
packages = [{include = "combine_gpx"}]

[tool.poetry.dependencies]
python = "^3.11"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
